--- a/app/src/main/res/layout/activity__student__assignment_list.xml
+++ b/app/src/main/res/layout/activity__student__assignment_list.xml
@@ -9,7 +9,7 @@
 
     <!-- Top Bar -->
     <RelativeLayout
-        android:id="@+id/topBar"
+        android:id="@+id/topBarrr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp">
